welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: illegal start of simple expression
  else if(((a<10)||(a>20))&&(b<=20))){
                                    ^